--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,19 @@
 <header>
-  <h1>Working</h1>
-  <p>2022</p>
+  <span class="header__logo-wrapper"
+    ><img
+      class="header__logo"
+      src="./images/logo-white.png"
+      alt="NAtours logo"
+  /></span>
+  <div class="heading-wrapper">
+    <h1 class="heading-primary">
+      <span class="heading-primary--main">outdoors</span
+      ><span class="heading-primary--sub">is where life happens</span>
+    </h1>
+    <a
+      href="#"
+      class="btn hero__btn"
+      >Discover</a
+    >
+  </div>
 </header>
