migrate to rem units

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,14 +1,14 @@
-<header>
+<header class="header">
   <span class="header__logo-wrapper"
     ><img
       class="header__logo"
       src="./images/logo-white.png"
       alt="NAtours logo"
   /></span>
-  <div class="heading-wrapper">
-    <h1 class="heading-primary">
-      <span class="heading-primary--main">outdoors</span
-      ><span class="heading-primary--sub">is where life happens</span>
+  <div class="header__heading-wrapper">
+    <h1 class="header__heading-primary">
+      <span class="header__heading-primary--main">outdoors</span
+      ><span class="header__heading-primary--sub">is where life happens</span>
     </h1>
     <a
       href="#"
