--- a/src/scss/common/_variables.scss
+++ b/src/scss/common/_variables.scss
@@ -6,12 +6,12 @@ $white: #ffffff;
 
 /*Shadows-----------------------*/
 
-$shadow-common: 0 8px 20px rgb(0 0 0 / 0.2);
-$shadow-common--alt: 0 2px 5px rgb(0 0 0 / 0.5);
+$shadow-common: 0 0.5rem 0.2rem rgb(0 0 0 / 0.2);
+$shadow-common--alt: 0 0.1rem 0.2rem rgb(0 0 0 / 0.5);
 
 /*Transition and Animation related -----------------------*/
 $default-cubic: 0.8, 0.8, 0.9, 0.9;
 $cubic-fast: 0.2, 0.2, 0.1, 0.2;
-$btn-up-shift: -6px;
-$btn-down-shift: 1px;
-$btn-press: 1px;
+$btn-up-shift: -0.1rem;
+$btn-down-shift: 0.1rem;
+$btn-press: 0.1rem;
