--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,4 +1,4 @@
-header {
+.header {
   position: relative;
   height: 95vh;
   background-image: linear-gradient(
@@ -19,19 +19,18 @@ header {
 }
 
 .header__logo {
-  height: 35px;
+  height: 3.5rem;
 }
 
-.heading-wrapper {
+.header__heading-wrapper {
   position: absolute;
-
   text-align: center;
   top: 45%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
 
-.heading-primary {
+.header__heading-primary {
   margin-bottom: 3rem;
   color: $white;
   text-transform: uppercase;
@@ -40,21 +39,21 @@ header {
   /*backface-visibility: hidden;*/
 }
 
-.heading-primary--main {
+.header__heading-primary--main {
   display: block;
-  font-size: 60px;
-  letter-spacing: 35px;
+  font-size: 6rem;
+  letter-spacing: 3.5rem;
 
   animation-name: moveInLeft;
   animation-duration: 1250ms;
   animation-timing-function: $default-cubic;
 }
 
-.heading-primary--sub {
+.header__heading-primary--sub {
   display: block;
-  font-size: 20px;
+  font-size: 2rem;
   font-weight: 700;
-  letter-spacing: 17px;
+  letter-spacing: 1.7rem;
 
   animation-name: moveInRight;
   animation-duration: 1250ms;
@@ -64,12 +63,12 @@ header {
 @keyframes moveInLeft {
   0% {
     opacity: 0;
-    transform: translateX(5vw);
+    transform: translateX(0.5rem);
   }
 
   50% {
     opacity: 0.2;
-    transform: translateX(-1vw);
+    transform: translateX(-0.5rem);
   }
 
   100% {
@@ -81,12 +80,12 @@ header {
 @keyframes moveInRight {
   0% {
     opacity: 0;
-    transform: translateX(-5vw);
+    transform: translateX(-0.5rem);
   }
 
   50% {
     opacity: 0.2;
-    transform: translateX(1vw);
+    transform: translateX(0.5rem);
   }
 
   100% {
@@ -107,7 +106,7 @@ header {
   color: inherit;
   text-decoration: none;
   position: relative;
-
+  font-size: 1.6rem;
   animation: moveUp 0.5s ease-in 0.3s;
   animation-fill-mode: backwards;
 }
@@ -115,7 +114,7 @@ header {
 @keyframes moveUp {
   0% {
     opacity: 0;
-    transform: translateY(10%);
+    transform: translateY(0.1rem);
   }
 
   100% {
@@ -127,7 +126,7 @@ header {
 .hero__btn {
   text-align: center;
   background-color: $white;
-  padding: 15px 30px;
+  padding: 1.5rem 3rem;
   border-radius: 100vw;
   margin: 0 auto;
   display: inline-block;
