organize basic architecture for scss files

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -6,13 +6,13 @@
       alt="NAtours logo"
   /></span>
   <div class="header__heading-wrapper">
-    <h1 class="header__heading-primary">
-      <span class="header__heading-primary--main">outdoors</span
-      ><span class="header__heading-primary--sub">is where life happens</span>
+    <h1 class="heading-primary">
+      <span class="heading-primary--main">outdoors</span
+      ><span class="heading-primary--sub">is where life happens</span>
     </h1>
     <a
       href="#"
-      class="btn hero__btn"
+      class="btn btn--hero btn--animated"
       >Discover</a
     >
   </div>
