--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -10,8 +10,7 @@ $shadow-common: 0 0.5rem 0.2rem rgb(0 0 0 / 0.2);
 $shadow-common--alt: 0 0.1rem 0.2rem rgb(0 0 0 / 0.5);
 
 /*Transition and Animation related -----------------------*/
+
 $default-cubic: 0.8, 0.8, 0.9, 0.9;
 $cubic-fast: 0.2, 0.2, 0.1, 0.2;
-$btn-up-shift: -0.1rem;
-$btn-down-shift: 0.1rem;
-$btn-press: 0.1rem;
+$slight-shift: -0.4rem;
