--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,4 +1,8 @@
 @import 'modern-normalize';
-@import './common/variables';
-@import './common/base';
+@import 'abstracts/variables';
+@import 'abstracts/functions';
+@import 'abstracts/mixins';
+@import 'base/base';
+@import 'base/animations';
+@import 'pages/home';
 @import './components/header';
