--- a/src/scss/base/_animations.scss
+++ b/src/scss/base/_animations.scss
@@ -1,35 +1,31 @@
 // Heading text animation ->
-@keyframes moveInLeft {
+@keyframes letterSpacingIn {
   0% {
     opacity: 0;
-    transform: translateX($slight-shift);
+    letter-spacing: 6rem;
   }
 
   50% {
     opacity: 0.2;
-    transform: translateX($slight-shift);
   }
 
   100% {
     opacity: 1;
-    transform: translateX(0);
   }
 }
 
-@keyframes moveInRight {
+@keyframes letterSpacingIn--subtle {
   0% {
     opacity: 0;
-    transform: translateX(-$slight-shift);
+    letter-spacing: 2.5rem;
   }
 
   50% {
     opacity: 0.2;
-    transform: translateX($slight-shift);
   }
 
   100% {
     opacity: 1;
-    transform: translateX(0);
   }
 }
 
