--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -5,10 +5,10 @@
       src="./images/logo-white.png"
       alt="NAtours logo"
   /></span>
-  <div class="header__heading-wrapper">
-    <h1 class="heading-primary">
-      <span class="heading-primary--main">outdoors</span
-      ><span class="heading-primary--sub">is where life happens</span>
+  <div class="heading">
+    <h1 class="heading__hero">
+      <span class="heading__hero--main">outdoors</span
+      ><span class="heading__hero--sub">is where life happens</span>
     </h1>
     <a
       href="#"
