--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -5,4 +5,6 @@
 @import 'base/base';
 @import 'base/animations';
 @import 'pages/home';
-@import './components/header';
+@import 'components/btn';
+@import 'layout/header';
+@import 'components/heading';
