--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -6,5 +6,6 @@
 @import 'base/animations';
 @import 'pages/home';
 @import 'components/btn';
+@import 'layout/grid';
 @import 'layout/header';
 @import 'components/heading';
