--- a/src/scss/components/_btn.scss
+++ b/src/scss/components/_btn.scss
@@ -1,26 +1,19 @@
-.btn {
-  transition: transform 150ms cubic-bezier($cubic-fast),
-    box-shadow 50ms cubic-bezier($cubic-fast);
-  box-shadow: $shadow-common;
-
-  &--animated:link,
-  &--animated:visited {
+.btn__hero {
+  &:link,
+  &:visited {
     text-transform: uppercase;
     color: inherit;
     text-decoration: none;
-    position: relative;
-    font-size: 1.6rem;
-    animation: moveUp 0.5s ease-in 0.3s;
-    animation-fill-mode: backwards;
-  }
-
-  &--hero {
+    font-size: $fz-regular;
     text-align: center;
     background-color: $white;
     padding: 1.5rem 3rem;
     border-radius: 100vw;
     margin: 0 auto;
     display: inline-block;
+    transition: transform 150ms cubic-bezier($cubic-fast),
+      box-shadow 50ms cubic-bezier($cubic-fast);
+    box-shadow: $shadow-common;
   }
 
   &:hover {
@@ -30,5 +23,31 @@
   &:active {
     transform: translateY($slight-shift);
     box-shadow: $shadow-common--alt;
+  }
+
+  &--animated:link,
+  &--animated:visited {
+    position: relative;
+
+    animation: moveUp 0.5s ease-in 0.3s;
+    animation-fill-mode: backwards;
+  }
+}
+
+.btn__about {
+  display: inline-block;
+  padding: 3px 6px;
+  font-size: $fz-regular;
+  text-decoration: none;
+  color: $blue-primary;
+  border-bottom: 2px solid $blue-primary;
+  background-color: transparent;
+  transition: background-color 150ms cubic-bezier($default-cubic),
+    color 150ms cubic-bezier($default-cubic);
+
+  &:hover,
+  &:focus {
+    background-color: $blue-primary;
+    color: white;
   }
 }
