--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -9,7 +9,7 @@
     url('../images/hero.jpg');
   background-size: cover;
   background-position: top;
-  /*clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);*/
+  clip-path: polygon(0 0, 100% 0, 100% 85vh, 0% 100%);
 
   &__logo-wrapper {
     position: absolute;
