--- a/src/scss/base/_utilities.scss
+++ b/src/scss/base/_utilities.scss
@@ -3,6 +3,10 @@
     text-align: center;
   }
 
+  &__icon-mgb-xs {
+    margin-bottom: 1rem;
+  }
+
   &__heading-mgb-sm {
     margin-bottom: 4rem;
   }
