--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,15 +1,6 @@
 @import 'modern-normalize';
-@import 'abstracts/variables';
-@import 'abstracts/functions';
-@import 'abstracts/mixins';
-@import 'base/utilities';
-@import 'base/base';
-@import 'base/animations';
-@import 'pages/home';
-@import 'components/btn';
-@import 'layout/grid';
-@import 'layout/header';
-@import 'base/typography';
-@import 'layout/section';
-@import 'layout/about';
-@import 'components/composition';
+@import 'abstracts/_abstract-dir';
+@import 'base/_base-dir';
+@import 'pages/_pages-dir';
+@import 'components/_components-dir';
+@import 'layout/_layout-dir';
