--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,12 +1,7 @@
 .header {
   position: relative;
   height: 95vh;
-  background-image: linear-gradient(
-      to top right,
-      rgba(111, 213, 189, 0.7),
-      rgba(85, 150, 197, 0.7)
-    ),
-    url('../images/hero.jpg');
+  background-image: $default-gradient, url('../images/hero.jpg');
   background-size: cover;
   background-position: top;
   clip-path: polygon(0 0, 100% 0, 100% 85vh, 0% 100%);
