--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -1,16 +1,22 @@
 .section__about {
   background-color: $color-bg-muted;
-  padding: 25rem 0;
-  margin-top: -10vh;
+  padding: $sectionPaddingY 0;
+  margin-top: -10rem;
 }
 
 .section__features {
-  padding: 20rem 0;
+  padding: $sectionPaddingY 0;
   margin-top: -11rem;
-  transform: skewY(-5deg);
+  transform: skewY(-3deg);
   @include backgroundImageGradientCover('../images/nat-4.jpg');
 
   & > * {
-    transform: skewY(5deg); // counteracts the skewY(-5deg) of the section
+    transform: skewY(3deg); // counteracts the skewY(-5deg) of the section
   }
+}
+
+.section__tours {
+  margin-top: -11rem;
+  padding: $sectionPaddingY 0;
+  background-color: $color-bg-muted;
 }
