add tours section

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -2,9 +2,10 @@
   position: relative;
   height: 95vh;
   background-image: $default-gradient, url('../images/hero.jpg');
+  background-blend-mode: multiply;
   background-size: cover;
   background-position: top;
-  clip-path: polygon(0 0, 100% 0, 100% 85vh, 0% 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 85%, 0% 100%);
 
   &__logo-wrapper {
     position: absolute;
