--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -12,7 +12,7 @@
     </h1>
     <a
       href="#"
-      class="btn btn__hero btn--animated"
+      class="btn btn__hero"
       >Discover</a
     >
   </div>
