--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -9,23 +9,25 @@ $default-gradient: linear-gradient(
   rgba(111, 213, 189, 0.7),
   rgba(85, 150, 197, 0.7)
 );
+$color-text: #222222;
+$border-bottom-details: #dcdcdc;
 
 $card-gradient-1: linear-gradient(
-  to bottom left,
-  rgb(255, 165, 75),
-  rgb(234, 145, 8)
+  to bottom,
+  rgba(255, 165, 75, 0.9),
+  rgba(234, 145, 8, 0.9)
 );
 
 $card-gradient-2: linear-gradient(
-  to bottom left,
-  rgba(67, 255, 114, 0.7),
-  rgba(24, 227, 34, 0.7)
+  to bottom,
+  rgba(72, 206, 104, 0.9),
+  rgba(34, 192, 46, 0.9)
 );
 
 $card-gradient-3: linear-gradient(
-  to bottom left,
-  rgba(78, 180, 239, 0.7),
-  rgba(25, 124, 220, 0.7)
+  to bottom,
+  rgba(78, 180, 239, 0.9),
+  rgba(25, 124, 220, 0.9)
 );
 //Shadows-----------------------
 
