--- a/src/scss/components/_btn.scss
+++ b/src/scss/components/_btn.scss
@@ -1,47 +1,40 @@
-.btn__hero {
-  &:link,
-  &:visited {
-    text-transform: uppercase;
-    color: inherit;
-    text-decoration: none;
-    font-size: $fz-regular;
-    text-align: center;
-    background-color: $white;
-    padding: 1.5rem 3rem;
-    border-radius: 100vw;
-    margin: 0 auto;
+.btn {
+  text-transform: uppercase;
+  color: inherit;
+  text-decoration: none;
+  font-size: $fz-regular;
+  text-align: center;
+  background-color: $white;
+  padding: 1.5rem 3rem;
+  border-radius: 100vw;
+  transition: transform 150ms cubic-bezier($cubic-fast),
+    box-shadow 50ms cubic-bezier($cubic-fast),
+    color 150ms cubic-bezier($cubic-fast),
+    background-color 150ms cubic-bezier($cubic-fast);
+  box-shadow: $shadow-common;
+
+  &__hero {
     display: inline-block;
-    transition: transform 150ms cubic-bezier($cubic-fast),
-      box-shadow 50ms cubic-bezier($cubic-fast);
-    box-shadow: $shadow-common;
-  }
 
-  &:hover {
-    transform: translateY($slight-shift);
-  }
+    &:hover {
+      transform: translateY($slight-shift);
+    }
 
-  &:active {
-    transform: translateY($slight-shift);
-    box-shadow: $shadow-common--alt;
-  }
-
-  &--animated:link,
-  &--animated:visited {
-    position: relative;
-
-    animation: moveUp 0.5s ease-in 0.3s;
-    animation-fill-mode: backwards;
+    &:active {
+      transform: translateY($slight-shift);
+      box-shadow: $shadow-common--alt;
+    }
   }
 }
 
 .btn__about {
   display: inline-block;
-  padding: 3px 6px;
+  padding: 1rem 2rem;
   font-size: $fz-regular;
   text-decoration: none;
   color: $blue-primary;
   border-bottom: 2px solid $blue-primary;
-  background-color: transparent;
+  background-color: $white;
   transition: background-color 150ms cubic-bezier($default-cubic),
     color 150ms cubic-bezier($default-cubic);
 
@@ -50,4 +43,15 @@
     background-color: $blue-primary;
     color: white;
   }
+}
+
+.btn__card {
+  &:hover,
+  &:focus {
+    box-shadow: $shadow-common--alt;
+  }
+}
+
+.btn__tours--all {
+  display: inline-block;
 }
