--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -1,11 +1,13 @@
+.section {
+  padding: $sectionPaddingY 0;
+}
+
 .section__about {
   background-color: $color-bg-muted;
-  padding: $sectionPaddingY 0;
   margin-top: -11rem;
 }
 
 .section__features {
-  padding: $sectionPaddingY 0;
   margin-top: -11rem;
   transform: skewY(-3deg);
   background-blend-mode: overlay;
@@ -18,6 +20,9 @@
 
 .section__tours {
   margin-top: -11rem;
-  padding: $sectionPaddingY 0;
   background-color: $color-bg-muted;
+}
+
+.section__testimonials {
+  padding: 15rem 0;
 }
