finish testimonials section

--- a/src/partials/testimonials.html
+++ b/src/partials/testimonials.html
@@ -1,4 +1,20 @@
 <section class="section section__testimonials">
+  <div class="bg__video">
+    <video
+      class="bg__video--content"
+      loop
+      autoplay
+      muted>
+      <source
+        src="images/video.mp4"
+        type="video/mp4" />
+      <source
+        src="images/video.webm"
+        type="video/webm" />
+      Your browser doesn't support video playback, you should upgrade to a newer
+      version
+    </video>
+  </div>
   <div class="u__text-center">
     <h2 class="heading__secondary u__heading-mgb-md">what people say</h2>
   </div>
@@ -34,20 +50,16 @@
             class="testimonials__image"
             src="./images/nat-9.jpg"
             alt="Woman kayaking" />
-          <figcaption class="testimonials__image-caption">
-            Karen Wolf
-          </figcaption>
+          <figcaption class="testimonials__image-caption">Mike Bird</figcaption>
         </figure>
         <div class="testimonials__text">
           <h3 class="heading__tertiary u__heading-mgb-sm">
-            I ate berries and tree bark
+            I stood like that for 3 hours straight
           </h3>
           <p>
-            Had the most wild weekend of my life. I made 1200 selfies, now I
-            will post them all on Facebook so everyone acknowledge that I am
-            capable of having a good time. Now this text is nicely shaped over
-            the circle image to the left, neat huh? Now this text is nicely
-            shaped over the circle image to the left, neat huh?
+            Yeah, don't mind me, just casually watching the sunrise, or
+            sunset... Whatever. So maybe it is my new hobby now, you know,
+            standing, watching...Yeah, I like that, this sounds like me, haha
           </p>
         </div>
       </li>
