add form and transitions to it

--- a/src/partials/testimonials.html
+++ b/src/partials/testimonials.html
@@ -59,7 +59,9 @@
           <p>
             Yeah, don't mind me, just casually watching the sunrise, or
             sunset... Whatever. So maybe it is my new hobby now, you know,
-            standing, watching...Yeah, I like that, this sounds like me, haha
+            standing, watching...Yeah, I like that, this sounds like me, haha. A
+            few more words to fix a slightly broken padding bottom.Have a nice,
+            beautiful day day
           </p>
         </div>
       </li>
