--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -1,9 +1,11 @@
 // COLORS-----------------------
 
-$blue-primary: #6fd2d5;
-$blue-secondary: #5593c5;
+$color-primary: #6fd2d5;
+$color-secondary: #5593c5;
 $white: #ffffff;
 $color-bg-muted: #f6f6f6;
+$color-text-placeholder: #adadad;
+$color-placeholder-invalid: #fd9b30;
 $default-gradient: linear-gradient(
   to top right,
   rgba(111, 213, 189, 0.7),
