--- a/src/scss/components/__components-dir.scss
+++ b/src/scss/components/__components-dir.scss
@@ -3,4 +3,5 @@
 @import './feature';
 @import './tours';
 @import './testimonials';
-@import 'bg-video';
+@import './bg-video';
+@import './booking';
