--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -29,3 +29,9 @@
   padding-bottom: $padding-xl;
   position: relative;
 }
+
+.section__booking {
+  padding-top: $padding-xl;
+  padding-bottom: $padding-xl;
+  background-image: $default-gradient;
+}
