--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -41,7 +41,7 @@
   font-size: 3.5rem;
   font-weight: 700;
   text-transform: uppercase;
-  background-image: linear-gradient(90deg, $blue-primary, $blue-secondary);
+  background-image: linear-gradient(90deg, $color-primary, $color-secondary);
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
