add footer, finish with booking form

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -12,6 +12,8 @@ $default-gradient: linear-gradient(
   rgba(85, 150, 197, 0.7)
 );
 $color-text: #222222;
+$color-text-alt: #8f8f8f;
+$color-dark: #424242;
 $border-bottom-details: #dcdcdc;
 
 $card-gradient-1: linear-gradient(
