--- a/src/scss/base/_utilities.scss
+++ b/src/scss/base/_utilities.scss
@@ -18,4 +18,14 @@
   &__heading-mgb-sm {
     margin-bottom: 2rem;
   }
+
+  &__mgt-sm {
+    margin-top: 2rem;
+  }
+  &__mgt-md {
+    margin-top: 4rem;
+  }
+  &__mgt-lg {
+    margin-top: 8rem;
+  }
 }
