--- a/src/partials/booking.html
+++ b/src/partials/booking.html
@@ -1,11 +1,11 @@
 <section class="section section__booking">
   <div class="row">
     <div class="booking">
-      <h2 class="heading__secondary u__heading-mgb-sm">Book your shit now!</h2>
+      <h2 class="heading__secondary u__heading-mgb-sm">Book your tour now!</h2>
 
       <form class="booking__form">
         <div class="booking__form--input-wrapper">
-          <label class="booking__form--name">
+          <label class="booking__form--label">
             <input
               class="booking__form-input"
               type="text"
@@ -15,7 +15,7 @@
           </label>
         </div>
         <div class="booking__form--input-wrapper">
-          <label class="booking__form--email">
+          <label class="booking__form--label">
             <input
               class="booking__form-input"
               type="email"
@@ -23,6 +23,41 @@
               required />
             <span class="booking__form-label-text">Email</span>
           </label>
+        </div>
+        <div class="booking__form-radio-group">
+          <div class="booking__form-radio">
+            <input
+              class="booking__form-radio-input"
+              id="individual"
+              type="radio"
+              name="tour-type"
+              required
+              checked />
+            <label
+              for="individual"
+              class="booking__form-radio-label">
+              <span class="booking__form-radio-button"></span>Individual
+            </label>
+          </div>
+          <div class="booking__form-radio">
+            <input
+              class="booking__form-radio-input"
+              id="group"
+              type="radio"
+              name="tour-type" />
+            <label
+              class="booking__form-radio-label"
+              for="group">
+              <span class="booking__form-radio-button"></span>Group
+            </label>
+          </div>
+        </div>
+        <div class="u__text-center">
+          <button
+            class="btn btn__booking u__mgt-md"
+            type="submit">
+            Send
+          </button>
         </div>
       </form>
     </div>
